Trigger saving the access token when the enter key is pressed

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -49,7 +49,7 @@
             data-dojo-attach-point="accessTokenInput"
             data-dojo-props="trim:true">
         <br /><br />
-        <button type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="saveAccessTokenButton">Save</button>
+        <button type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="saveAccessTokenButton" id="saveAccessTokenButton">Save</button>
         <button type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="cancelAccessTokenButton">Cancel</button>
     </div>
 </div>
