Add a minimum width to the widget

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -23,6 +23,7 @@
 .rtcGitConnectorMainLayout {
     box-sizing: border-box;
     width: 80vw;
+    min-width: 800px;
     height: 80vh;
     margin: 1rem;
 }
