--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -1,3 +1,7 @@
 <div>
-    <p>Test: ViewAndSelectCommits</p>
+    <label class="rtcGitConnectorLabelText">Recent commits</label>
+    <div class="rtcGitConnectorViewAndSelectWrapper">
+        <div class="rtcGitConnectorViewAndSelectList">Test list</div>
+        <div class="rtcGitConnectorViewAndSelectDetails">Test details</div>
+    </div>
 </div>
