Test with more data

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -107,6 +107,7 @@
     height: 500px;
     margin-right: 10px;
     border: 1px solid gray;
+    overflow-y: auto;
 }
 
 .rtcGitConnectorViewAndSelectDetails {
