--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -14,6 +14,54 @@
                 <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge pull request #3736 from desktop/you-cant-always-create-a-branch</span>
                 <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">William Shepherd  committed on Thu Nov 25 2017 at 17:32</span>
             </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Update README</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Martin Benninger committed on Thu Nov 30 2017 at 09:53</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge branch 'docs/grammar-fixes' into 'master'</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Roger Meier committed on Fri Dec 29 2017 at 16:43</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge pull request #3736 from desktop/you-cant-always-create-a-branch</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">William Shepherd  committed on Thu Nov 25 2017 at 17:32</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Update README</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Martin Benninger committed on Thu Nov 30 2017 at 09:53</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge branch 'docs/grammar-fixes' into 'master'</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Roger Meier committed on Fri Dec 29 2017 at 16:43</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge pull request #3736 from desktop/you-cant-always-create-a-branch</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">William Shepherd  committed on Thu Nov 25 2017 at 17:32</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Update README</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Martin Benninger committed on Thu Nov 30 2017 at 09:53</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge branch 'docs/grammar-fixes' into 'master'</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Roger Meier committed on Fri Dec 29 2017 at 16:43</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge pull request #3736 from desktop/you-cant-always-create-a-branch</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">William Shepherd  committed on Thu Nov 25 2017 at 17:32</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Update README</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Martin Benninger committed on Thu Nov 30 2017 at 09:53</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge branch 'docs/grammar-fixes' into 'master'</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Roger Meier committed on Fri Dec 29 2017 at 16:43</span>
+            </div>
+            <div class="rtcGitConnectorViewAndSelectListItem">
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge pull request #3736 from desktop/you-cant-always-create-a-branch</span>
+                <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">William Shepherd  committed on Thu Nov 25 2017 at 17:32</span>
+            </div>
         </div>
         <div class="rtcGitConnectorViewAndSelectDetails">Test details</div>
     </div>
