--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -104,7 +104,7 @@
 .rtcGitConnectorViewAndSelectList {
     flex-grow: 1;
     width: 100%;
-    height: 500px;
+    height: 300px;
     margin-right: 10px;
     border: 1px solid gray;
     overflow-y: auto;
@@ -113,13 +113,23 @@
 .rtcGitConnectorViewAndSelectDetails {
     flex-grow: 1;
     width: 100%;
-    height: 500px;
+    height: 300px;
     margin-left: 10px;
     background-color: lightgray;
 }
 
 .rtcGitConnectorViewAndSelectListItem {
-    border: 1px solid gray;
+    border-bottom: 1px solid lightgray;
     padding: .2rem;
     font-size: 1rem;
+    cursor: pointer;
+}
+
+.rtcGitConnectorViewAndSelectListItem:hover {
+    background-color: lightgray;
+}
+
+.rtcGitConnectorViewAndSelectListItem.selected {
+    background-color: #cfe5fa;
+    cursor: default;
 }
