--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -2,12 +2,6 @@
     <label class="rtcGitConnectorLabelText">Recent commits</label>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectCommitsWrapper">
         <div class="rtcGitConnectorViewAndSelectList"></div>
-        <div class="rtcGitConnectorViewAndSelectDetails">
-            <span class="rtcGitConnectorViewAndSelectDetailsSpan rtcGitConnectorViewAndSelectDetailsTitle">Commit Details</span>
-            <span class="rtcGitConnectorViewAndSelectDetailsSpan"><span class="rtcGitConnectorViewAndSelectDetailsLabel">Message: </span>laskdjflksdjfonv</span>
-            <span class="rtcGitConnectorViewAndSelectDetailsSpan"><span class="rtcGitConnectorViewAndSelectDetailsLabel">Author: </span>l;ksdf asldkfj</span>
-            <span class="rtcGitConnectorViewAndSelectDetailsSpan"><span class="rtcGitConnectorViewAndSelectDetailsLabel">Date: </span>0239.l/sadf0923</span>
-            <span class="rtcGitConnectorViewAndSelectDetailsSpan"><span class="rtcGitConnectorViewAndSelectDetailsLabel">SHA: </span>09dsf;lkjnwoicua32ir89fsdahp0983</span>
-        </div>
+        <div class="rtcGitConnectorViewAndSelectDetails"></div>
     </div>
 </div>
