--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -111,6 +111,7 @@
 }
 
 .rtcGitConnectorViewAndSelectListItem {
+    display: flex;
     border-bottom: 1px solid lightgray;
     padding: .2rem;
     font-size: 1rem;
@@ -124,6 +125,25 @@
 .rtcGitConnectorViewAndSelectListItem.selected {
     background-color: #cfe5fa;
     cursor: default;
+}
+
+.rtcGitConnectorViewAndSelectListItemButton {
+    width: 2.5rem;
+    height: 100%;
+    background-color: lightgreen;
+    border: 0.2rem solid green;
+    border-radius: .5rem;
+    margin: auto .3rem;
+    font-size: 2rem;
+    font-weight: bold;
+    color: green;
+    text-align: center;
+    cursor: pointer;
+}
+
+.rtcGitConnectorViewAndSelectListItemContent {
+    width: 100%;
+    height: 100%;
 }
 
 .rtcGitConnectorViewAndSelectDetails {
