Add basic ViewCommitsToLink widget

--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -26,4 +26,7 @@
         <div data-dojo-attach-point="viewAndSelectRequests"
             data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectRequests"></div>
     </div>
+
+    <div data-dojo-attach-point="viewCommitsToLink"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewCommitsToLink"></div>
 </div>
