--- a/resources/ui/widget/templates/SelectLinkType.html
+++ b/resources/ui/widget/templates/SelectLinkType.html
@@ -32,4 +32,7 @@
 
     <div data-dojo-attach-point="viewIssuesToLink"
         data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewIssuesToLink"></div>
+
+    <div data-dojo-attach-point="viewRequestsToLink"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewRequestsToLink"></div>
 </div>
