Change to id and hide

--- a/resources/ui/widget/templates/ViewCommitsToLink.html
+++ b/resources/ui/widget/templates/ViewCommitsToLink.html
@@ -1,3 +1,3 @@
-<div class="viewCommitsToLinkContainer">
+<div id="viewCommitsToLinkContainer" style="display: none;">
     <p>Test: ViewCommitsToLink</p>
 </div>
