--- a/resources/ui/widget/templates/ViewIssuesToLink.html
+++ b/resources/ui/widget/templates/ViewIssuesToLink.html
@@ -1,3 +1,3 @@
-<div class="viewIssuesToLinkContainer">
+<div id="viewIssuesToLinkContainer" style="display: none;">
     <p>Test: ViewIssuesToLink</p>
 </div>
