--- a/resources/ui/widget/templates/ViewRequestsToLink.html
+++ b/resources/ui/widget/templates/ViewRequestsToLink.html
@@ -1,3 +1,3 @@
-<div class="viewRequestsToLinkContainer">
+<div id="viewRequestsToLinkContainer" style="display: none;">
     <p>Test: ViewRequestsToLink</p>
 </div>
