--- a/resources/ui/widget/templates/ViewCommitsToLink.html
+++ b/resources/ui/widget/templates/ViewCommitsToLink.html
@@ -1,3 +1,15 @@
-<div id="viewCommitsToLinkContainer" style="display: none;">
-    <p>Test: ViewCommitsToLink</p>
+<div>
+    <div id="viewCommitsToLinkContainer" style="display: none;">
+        <br />
+        <label class="rtcGitConnectorLabelText">Commits to link</label>
+        <div class="rtcGitConnectorViewItemsToLinkList">
+            <div class="rtcGitConnectorViewAndSelectListItem itemToLink">
+                <div class="rtcGitConnectorViewAndSelectListItemButton removeButton">-</div>
+                <div class="rtcGitConnectorViewAndSelectListItemContent">
+                    <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine">Merge branch '41683-timeout-is-not-set-for-gitaly-fetch_remote-calls' into 'master'</span>
+                    <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine">Stan Hu committed on Mon Jan 08 2018 at 23:24</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
