Resize the mainDialog after adding content

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -24,7 +24,7 @@
     box-sizing: border-box;
     width: 80vw;
     min-width: 800px;
-    height: 80vh;
+    min-height: 80vh;
     margin: 1rem;
 }
 
