Add layout to the ViewAndSelectIssues widget

--- a/resources/ui/widget/templates/ViewAndSelectIssues.html
+++ b/resources/ui/widget/templates/ViewAndSelectIssues.html
@@ -1,3 +1,7 @@
 <div>
-    <p>Test: ViewAndSelectIssues</p>
+    <label class="rtcGitConnectorLabelText">Recent issues</label>
+    <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectIssuesWrapper">
+        <div class="rtcGitConnectorViewAndSelectList"></div>
+        <div class="rtcGitConnectorViewAndSelectDetails"></div>
+    </div>
 </div>
