Add layout to the ViewAndSelectRequests widget

--- a/resources/ui/widget/templates/ViewAndSelectRequests.html
+++ b/resources/ui/widget/templates/ViewAndSelectRequests.html
@@ -1,3 +1,7 @@
 <div>
-    <p>Test: ViewAndSelectRequests</p>
+    <label class="rtcGitConnectorLabelText">Recent requests</label>
+    <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectRequestsWrapper">
+        <div class="rtcGitConnectorViewAndSelectList"></div>
+        <div class="rtcGitConnectorViewAndSelectDetails"></div>
+    </div>
 </div>
