Add layout to the ViewIssuesToLink widget

--- a/resources/ui/widget/templates/ViewIssuesToLink.html
+++ b/resources/ui/widget/templates/ViewIssuesToLink.html
@@ -1,3 +1,7 @@
-<div id="viewIssuesToLinkContainer" style="display: none;">
-    <p>Test: ViewIssuesToLink</p>
+<div>
+    <div id="viewIssuesToLinkContainer" style="display: none;">
+        <br />
+        <label class="rtcGitConnectorLabelText">Issues to link</label>
+        <div class="rtcGitConnectorViewItemsToLinkList"></div>
+    </div>
 </div>
