Add layout to the ViewRequestsToLink widget

--- a/resources/ui/widget/templates/ViewRequestsToLink.html
+++ b/resources/ui/widget/templates/ViewRequestsToLink.html
@@ -1,3 +1,7 @@
-<div id="viewRequestsToLinkContainer" style="display: none;">
-    <p>Test: ViewRequestsToLink</p>
+<div>
+    <div id="viewRequestsToLinkContainer" style="display: none;">
+        <br />
+        <label class="rtcGitConnectorLabelText">Requests to link</label>
+        <div class="rtcGitConnectorViewItemsToLinkList"></div>
+    </div>
 </div>
