Add button click event handlers

--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -29,8 +29,8 @@
     <div id="selectedRegisteredGitRepositoryContainer"></div>
 
     <div class="rtcGitConnectorActionButtons">
-        <button class="primary-button" type="button">Save</button>
-        <button class="secondary-button" type="button">Cancel</button>
+        <button id="rtcGitConnectorSaveButton" class="primary-button" type="button">Save</button>
+        <button id="rtcGitConnectorCancelButton" class="secondary-button" type="button">Cancel</button>
     </div>
 
     <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="getAccessTokenDialog" title="Save access token" id="getAndSaveAccessTokenDialog">
