--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -33,6 +33,8 @@
         <button id="rtcGitConnectorCancelButton" class="secondary-button" type="button">Cancel</button>
     </div>
 
+    <div id="rtcGitConnectorFullPageLoadingOverlay" style="display: none;">Saving...</div>
+
     <div data-dojo-type="dijit/Dialog" data-dojo-attach-point="getAccessTokenDialog" title="Save access token" id="getAndSaveAccessTokenDialog">
         <p id="getGitHubAccessTokenContainer" style="display: none;">Please enter your GitHub access token below.<br />
             You can create a new access token here: <a href='https://github.com/settings/tokens' target='_blank'>GitHub Access Token</a><br />
