--- a/resources/ui/widget/templates/MainLayout.html
+++ b/resources/ui/widget/templates/MainLayout.html
@@ -30,6 +30,7 @@
 
     <div class="rtcGitConnectorActionButtons">
         <button id="rtcGitConnectorSaveButton" class="primary-button" type="button">Save</button>
+        <button id="rtcGitConnectorSaveAndCloseButton" class="primary-button" type="button">Save and Close</button>
         <button id="rtcGitConnectorCancelButton" class="secondary-button" type="button">Cancel</button>
     </div>
 
