Filter and highlight results for requests

--- a/resources/ui/widget/templates/ViewAndSelectIssues.html
+++ b/resources/ui/widget/templates/ViewAndSelectIssues.html
@@ -3,7 +3,7 @@
     <br />
     <input id="viewAndSelectIssuesFilterInput"
         class="viewAndSelectFilterInput"
-        placeholder="Filter issues by message or author..."
+        placeholder="Filter issues by title or author..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="issuesFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
