--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -105,6 +105,18 @@
     cursor: default;
 }
 
+.viewAndSelectSearchInput {
+    width: calc(50% - 75px);
+    margin-bottom: .5rem;
+}
+
+.viewAndSelectSearchButton {
+    width: 60px;
+    margin-bottom: .5rem;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .viewAndSelectFilterInput {
     width: calc(50% - 11px);
     margin-bottom: .5rem;
