Add search and clear buttons

--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -7,9 +7,12 @@
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="commitsSearchInput"
         data-dojo-props="trim:true">
-        <button id="viewAndSelectCommitsSearchButton"
+    <button id="viewAndSelectCommitsSearchButton"
             class="viewAndSelectSearchButton"
             type="button">Search</button>
+    <button id="viewAndSelectCommitsSearchClearButton"
+            class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+            type="button">Clear</button>
     <br />
     <input id="viewAndSelectCommitsFilterInput"
         class="viewAndSelectFilterInput"
@@ -17,6 +20,9 @@
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="commitsFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
+    <button id="viewAndSelectCommitsFilterClearButton"
+        class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+        type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectCommitsWrapper">
         <div class="rtcGitConnectorViewAndSelectList"></div>
         <div class="rtcGitConnectorViewAndSelectDetails"></div>
