--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -106,19 +106,32 @@
 }
 
 .viewAndSelectSearchInput {
-    width: calc(50% - 75px);
+    width: calc(50% - 138px);
     margin-bottom: .5rem;
 }
 
 .viewAndSelectSearchButton {
-    width: 60px;
-    margin-bottom: .5rem;
     display: inline-block;
+    width: 60px;
+    height: 20px;
+    margin-bottom: .5rem;
+    border: 1px solid;
+    border-radius: 3px;
+    border-color: #357ebd;
+    background-color: #428bca;
+    color: white;
     vertical-align: middle;
+    cursor: pointer;
+}
+
+.viewAndSelectSearchButton.viewAndSelectSearchClearButton {
+    border-color: #ccc;
+    background-color: #fbfbfb;
+    color: #333;
 }
 
 .viewAndSelectFilterInput {
-    width: calc(50% - 11px);
+    width: calc(50% - 74px);
     margin-bottom: .5rem;
 }
 
