--- a/resources/ui/widget/templates/ViewAndSelectRequests.html
+++ b/resources/ui/widget/templates/ViewAndSelectRequests.html
@@ -1,12 +1,28 @@
 <div>
     <label class="rtcGitConnectorLabelText">Recent requests</label>
     <br />
+    <input id="viewAndSelectRequestsSearchInput"
+        class="viewAndSelectSearchInput"
+        placeholder="Search requests by id..."
+        data-dojo-type="dijit/form/TextBox"
+        data-dojo-attach-point="requestsSearchInput"
+        data-dojo-props="trim:true">
+    <button id="viewAndSelectRequestsSearchButton"
+            class="viewAndSelectSearchButton"
+            type="button">Search</button>
+    <button id="viewAndSelectRequestsSearchClearButton"
+            class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+            type="button">Clear</button>
+    <br />
     <input id="viewAndSelectRequestsFilterInput"
         class="viewAndSelectFilterInput"
-        placeholder="Filter requests by title or author..."
+        placeholder="Filter requests by title, author, id..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="requestsFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
+    <button id="viewAndSelectRequestsFilterClearButton"
+        class="viewAndSelectSearchButton viewAndSelectSearchClearButton"
+        type="button">Clear</button>
     <div class="rtcGitConnectorViewAndSelectWrapper" id="viewAndSelectRequestsWrapper">
         <div class="rtcGitConnectorViewAndSelectList"></div>
         <div class="rtcGitConnectorViewAndSelectDetails"></div>
