Don't allow duplicates in the commits lists

--- a/resources/ui/widget/templates/ViewAndSelectCommits.html
+++ b/resources/ui/widget/templates/ViewAndSelectCommits.html
@@ -3,7 +3,7 @@
     <br />
     <input id="viewAndSelectCommitsSearchInput"
         class="viewAndSelectSearchInput"
-        placeholder="Search commits by SHA1..."
+        placeholder="Search commits by SHA..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="commitsSearchInput"
         data-dojo-props="trim:true">
@@ -16,7 +16,7 @@
     <br />
     <input id="viewAndSelectCommitsFilterInput"
         class="viewAndSelectFilterInput"
-        placeholder="Filter commits by message, author, SHA1..."
+        placeholder="Filter commits by message, author, SHA..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="commitsFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
