--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -208,6 +208,10 @@ button.viewAndSelectSearchButton[disabled] {
     text-align: center;
 }
 
+.rtcGitConnectorViewAndSelectListItemAlreadyLinked {
+    opacity: 0.6;
+}
+
 .rtcGitConnectorViewAndSelectListItemContent {
     width: 100%;
     height: 100%;
