--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -1,5 +1,5 @@
 /*
-    Don't depend on the styles being withing this container style (or any container really).
+    Don't depend on the styles being within this container style (or any container really).
     Dojo can and does place the elements at different places in the dom from where they were defined.
 
     If you try something like this:
@@ -17,8 +17,6 @@
 
 /*
     Set the height and width of the widget in percentage of the window height / width.
-    This is nice and responsive but may require a minimum height / width to be set once
-    the layout has been better defined.
 */
 .rtcGitConnectorMainLayout {
     box-sizing: border-box;
