Improve styling of the already linked icon

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -193,17 +193,10 @@ button.viewAndSelectSearchButton[disabled] {
     color: red;
 }
 
-.rtcGitConnectorViewAndSelectListItemEmptyButton {
-    width: 2.5rem;
-    height: 100%;
+.rtcGitConnectorViewAndSelectListItemButton.emptyButton {
     background-color: #ccc;
-    border: 0.2rem solid #555;
-    border-radius: .5rem;
-    margin: auto .3rem;
-    font-size: 2rem;
-    font-weight: bold;
+    border-color: #555;
     color: #555;
-    text-align: center;
 }
 
 .rtcGitConnectorViewAndSelectListItemAlreadyLinked {
