--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -176,25 +176,23 @@ button.viewAndSelectSearchButton[disabled] {
 .rtcGitConnectorViewAndSelectListItemButton {
     width: 1rem;
     height: 100%;
-    background-color: lightblue;
-    border: 0.2rem solid blue;
+    background-color: white;
+    border: 0.2rem solid #0645AD;
     border-radius: .5rem;
     margin: auto .3rem;
     padding: .5rem;
     font-size: 1rem;
-    color: blue;
+    color: #0645AD;
     text-align: center;
     cursor: pointer;
 }
 
 .rtcGitConnectorViewAndSelectListItemButton.removeButton {
-    background-color: lightcoral;
-    border-color: red;
-    color: red;
+    border-color: #CC2200;
+    color: #CC2200;
 }
 
 .rtcGitConnectorViewAndSelectListItemButton.emptyButton {
-    background-color: #ccc;
     border-color: #555;
     color: #555;
     cursor: default;
