--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -174,28 +174,31 @@ button.viewAndSelectSearchButton[disabled] {
 }
 
 .rtcGitConnectorViewAndSelectListItemButton {
-    width: 1rem;
+    width: 2rem;
     height: 100%;
-    background-color: white;
-    border: 0.2rem solid #0645AD;
-    border-radius: .5rem;
     margin: auto .3rem;
-    padding: .5rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #0645AD;
     text-align: center;
     cursor: pointer;
+
+    /* background-color: white;
+    border: 0.2rem solid #0645AD;
+    border-radius: .5rem;
+    padding: .5rem; */
 }
 
 .rtcGitConnectorViewAndSelectListItemButton.removeButton {
-    border-color: #CC2200;
     color: #CC2200;
+
+    /* border-color: #CC2200; */
 }
 
 .rtcGitConnectorViewAndSelectListItemButton.emptyButton {
-    border-color: #555;
     color: #555;
     cursor: default;
+    
+    /* border-color: #555; */
 }
 
 .rtcGitConnectorViewAndSelectListItemAlreadyLinked {
