--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -242,10 +242,10 @@ button.viewAndSelectSearchButton[disabled] {
 
 #rtcGitConnectorFullPageLoadingOverlay {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: -1rem;
+    bottom: -1rem;
+    left: -1rem;
+    right: -1rem;
     background-color: white;
     z-index: 10000;
     text-align: center;
