Use a green plus icon for creating a new issue

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -188,6 +188,12 @@ button.viewAndSelectSearchButton[disabled] {
     padding: .5rem; */
 }
 
+.rtcGitConnectorViewAndSelectListItemButton.addButton {
+    color: green;
+
+    /* border-color: green; */
+}
+
 .rtcGitConnectorViewAndSelectListItemButton.removeButton {
     color: #CC2200;
 
