Filter issues with the ViewHelper

--- a/resources/ui/widget/templates/ViewAndSelectIssues.html
+++ b/resources/ui/widget/templates/ViewAndSelectIssues.html
@@ -16,7 +16,7 @@
     <br />
     <input id="viewAndSelectIssuesFilterInput"
         class="viewAndSelectFilterInput"
-        placeholder="Filter issues by title, author, id..."
+        placeholder="Filter issues by title, author, state, id..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="issuesFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
