Filter requests with the ViewHelper

--- a/resources/ui/widget/templates/ViewAndSelectRequests.html
+++ b/resources/ui/widget/templates/ViewAndSelectRequests.html
@@ -16,7 +16,7 @@
     <br />
     <input id="viewAndSelectRequestsFilterInput"
         class="viewAndSelectFilterInput"
-        placeholder="Filter requests by title, author, id..."
+        placeholder="Filter requests by title, author, state, id..."
         data-dojo-type="dijit/form/TextBox"
         data-dojo-attach-point="requestsFilterInput"
         data-dojo-props="trim:true, intermediateChanges:true">
