Update the default issue template

--- a/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
+++ b/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
@@ -2,10 +2,15 @@
 
 {{{description.content}}}
 
-### Owned by
+### Acceptance Criteria
 
-{{{owner.emailAddress}}}
+{{{com.ibm.team.apt.attribute.acceptance}}}
 
-### Filed Against
+### Other Attributes
 
-{{{category.label}}}
+| Attributes | Values |
+| --- | --- |
+| Owned By | [{{{owner.name}}}](mailto:{{{owner.emailAddress}}}) |
+| Filed Against | {{{category.label}}} |
+| Planned For | {{{target.label}}} |
+| Tags | {{{internalTags.content}}} |
