Add the turndown helper and newline characters to the issue template

--- a/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
+++ b/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
@@ -1,16 +1,16 @@
-### Description
-
-{{{description.content}}}
-
-### Acceptance Criteria
-
-{{{com.ibm.team.apt.attribute.acceptance}}}
-
-### Other Attributes
-
-| Attributes | Values |
-| --- | --- |
-| Owned By | [{{{owner.name}}}](mailto:{{{owner.emailAddress}}}) |
-| Filed Against | {{{category.label}}} |
-| Planned For | {{{target.label}}} |
-| Tags | {{{internalTags.content}}} |
+### Description\n
+\n
+{{{turndown description.content}}}\n
+\n
+### Acceptance Criteria\n
+\n
+{{{turndown com.ibm.team.apt.attribute.acceptance}}}\n
+\n
+### Other Attributes\n
+\n
+| Attributes | Values |\n
+| --- | --- |\n
+| Owned By | [{{{owner.name}}}](mailto:{{{owner.emailAddress}}}) |\n
+| Filed Against | {{{category.label}}} |\n
+| Planned For | {{{target.label}}} |\n
+| Tags | {{{internalTags.content}}} |\n
