Only add acceptance criteria to the template when it's present

--- a/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
+++ b/resources/ui/widget/templates/HandlebarsTemplates/DefaultIssueTemplate.handlebars
@@ -2,10 +2,12 @@
 \n
 {{{turndown description.content}}}\n
 \n
+{{#if com.ibm.team.apt.attribute.acceptance.content}}
 ### Acceptance Criteria\n
 \n
-{{{turndown com.ibm.team.apt.attribute.acceptance}}}\n
+{{{turndown com.ibm.team.apt.attribute.acceptance.content}}}\n
 \n
+{{/if}}
 ### Other Attributes\n
 \n
 | Attributes | Values |\n
